tests/errors/vector-empty-non-vec-expected.ari
fn main() -> i64 {
  let value: i64 = [];
  return value;
}
